# dss_homework

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat
include/: Application.h  Background.h  ContentTile.h  ContentTileData.h  ContentTileList.h  CoordinateConverter.h  GlfwUserPointer.h  HTTPSClient.h  IMesh.h  IndexBuffer.h  Input.h  MLBGameContent.h  MLBStatsFetcher.h  Proxy.h  QuadMesh.h  ShaderProgram.h  Text.h  Texture.h  TexturedDrawable.h  Transform.h  Utility.h  VertexBuffer.h  VertexFormat.h  Window.h  WindowResizeEvent.h
resources/shaders/: basic.frag  basic.vert  textured.frag  textured.vert
src/: Application.cpp  Background.cpp  ContentTile.cpp  ContentTileList.cpp  HTTPSClient.cpp  IndexBuffer.cpp  Input.cpp  MLBStatsFetcher.cpp  QuadMesh.cpp  ShaderProgram.cpp  Text.cpp  Texture.cpp  VertexBuffer.cpp  Window.cpp  main.cpp
